# minatovar_bot

./: .env  .env-non-dev  .gitignore  Makefile  README.md  docker-compose.yaml  requirements.txt  ruff.toml
minatovar_bot/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
minatovar_bot/docker/: bot.sh
minatovar_bot/migrations/: env.py
minatovar_bot/migrations/versions/: 035c012f5da6_rename_promos.py  20d34876f698_rename_url_to_article.py  2f0b0d6e58d4_promos_text_4096.py  34148ffe84ce_new_statuses.py  48e209a3c16a_status_paywait.py  635e2c24f285_create_admins_table.py  63e9ed217af6_add_admin_foreign_key.py  7f4dcf7d43ea_rename_fix.py  94ee2181f8f3_create_new_base_model.py  98c53d114243_mapped.py  a83885c8a0c9_add_time_created_for_orders_and_.py  a8cbc193e138_id_is_bigint.py  b8d434532ce5_cascade_on_delete_in__referral.py  c9c2c47ccd99_create.py  e024bb7ee40a_cascade_on_delete_in__referral.py  e9553fa9a86b_timezone_off.py  f0dbb67824ea_change_size_type.py  ff79f045ec0f_init.py
minatovar_bot/src/: config.py  create_bot.py  main.py  messages.py  wait_postgres.py
minatovar_bot/src/admin/: admin.py  dal.py  keyboards.py  messages.py  models.py  router.py
minatovar_bot/src/auth/: auth.py  utils.py
minatovar_bot/src/cache/: redis.py  serialization.py
minatovar_bot/src/client/: admin.py  dal.py  keyboards.py  messages.py  models.py  router.py  utils.py
minatovar_bot/src/db/: admin.py  connection.py  dals.py  models.py  session.py
minatovar_bot/src/errors/: router.py
minatovar_bot/src/fsms/: __init__.py  fsms.py
minatovar_bot/src/handlers/: __init__.py  admin.py  client.py  error.py  messages.py  orders.py
minatovar_bot/src/keyboards/: __init__.py  common.py  kb_admin.py  kb_client.py  kb_order.py
(+47 files in other folders)
