[project]
authors = [
  {name = "kotafan1rich", email = "lesapond2007@gmail.com"},
]
dependencies = [
  "aiogram (>=3.21.0,<4.0.0)",
  "pydantic (>=2.11.7,<3.0.0)",
  "redis (>=6.2.0,<7.0.0)",
  "ruff (>=0.12.3,<0.13.0)",
  "asyncpg (>=0.30.0,<0.31.0)",
#   "psycopg2 (>=2.9.10,<3.0.0)",
  "sqlalchemy (>=2.0.41,<3.0.0)",
  "uvicorn (>=0.35.0,<0.36.0)",
  "fastapi (>=0.116.1,<0.117.0)",
  "jinja2 (>=3.1.6,<4.0.0)",
  "starlette-admin",
  "pydantic-settings (>=2.10.1,<3.0.0)",
  "alembic (>=1.16.4,<2.0.0)",
  "bcrypt (==3.2.0)",
  "passlib[bcrypt] (>=1.7.4,<2.0.0)",
  "psycopg2-binary",
  "itsdangerous"
]
description = ""
name = "minatovar-bot"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.poetry]
package-mode = false
